# cotter-fastapi

./: README.md  pyproject.toml
fastapi_cotter/: __main__.py  app.py
tests/: test_fastapi_cotter.py
